[package]
name = "whister"
version = "0.1.0"
edition = "2021"
authors = ["Miel Peeters"]
description = "AI toolkit for playing colour whist."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
text_io = "0.1.12"
termion = "2.0.1"