[package]
name = "whister"
version = "0.1.0"
edition = "2021"
authors = ["Miel Peeters"]
description = "AI toolkit for playing colour whist."

[dependencies]
rand = "0.8.5"
text_io = "0.1.12"
termion = "2.0.1"
itertools = "0.11.0"
serde = { version = "1.0.164", features = ["derive"]}
serde_json = "1.0.99"
serde-pickle = "1.1.1"
indicatif = "0.17.5"