[package]
name = "whister"
version = "0.1.0"
edition = "2021"
authors = ["Miel Peeters"]
description = "AI toolkit for playing colour whist."
default-run = "whister"

[dependencies]
rand = "0.8.5"
text_io = "0.1.12"
termion = "2.0.1"
itertools = "0.11.0"
serde = { version = "1.0.175", features = ["derive"] }
indicatif = "0.17.5"
dirs = "5.0.1"
num_cpus = "1.16.0"
bincode = "1.3.3"
flate2 = "1.0.26"
csv = "1.3.0"
